# ai-debate-platform

./: .env-example  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Makefile  README.md  homework_guidelines_summary.txt  main.py  pyproject.toml
.chroma_db/: chroma.sqlite3
config/: logging_config.json  models.json  pricing.json  rate_limits.json  setup.json  skills.json  skills_prompts.json
docs/: DEMO_TRANSCRIPT.md  LIMITATIONS.md  PLAN.md  PRD.md  PRD_gatekeeper.md  PRD_ipc.md  PRD_watchdog.md  PROMPTS.md  PROMPT_HISTORY.md  REQUIREMENTS_TRACEABILITY.md  TESTING.md  TODO.md  debate_transcript.md  skill_log.md
docs/gui setup/: plan.md  prd.md  prompt-history.md  todo.md
docs/initial setup/: PLAN.md  PRD.md  TODO.md
docs/maintenance and debugging/: README.md  debugging-log.md  maintenance-todo.md  prompt-history.md  runbook.md
gui/: app.js  index.html  styles.css
scripts/: test_zai.py
src/: main.py
src/ai_debate_platform.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/cli/: menu.py  runner.py
src/gui/: __init__.py  debate_runner.py  server.py  server_paths.py  server_response.py  service_builder.py
src/ipc/: __init__.py  channel.py  heartbeat.py  message.py  protocol.py
src/models/: __init__.py  debate.py
src/rag/: __init__.py  document_loader.py  models.py  rag_service.py  retriever.py  splitter.py  topic_fetcher.py  vector_store.py
src/sdk/: base_client.py  exceptions.py  factory.py  gemini_client.py  groq_client.py  llm_service.py  mock_client.py  openai_client.py  openrouter_client.py  zai_client.py  (+1 more)
(+78 files in other folders)
